testing/sqltests/tests/snapshot_tests/indexes/snapshots/indexes__full-scan-non-indexed-column.snap
---
source: indexes.sqltest
expression: SELECT id, sku, name FROM products WHERE name LIKE '%Widget%';
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products
