testing/sqltests/tests/snapshot_tests/indexes/snapshots/indexes__in-list-collation-mismatch.snap
---
source: indexes.sqltest
expression: SELECT id FROM collated_values WHERE val IN ('hello');
info:
  statement_type: SELECT
  tables:
  - collated_values
  setup_blocks:
  - collated-index-mismatch
  database: ':memory:'
---
QUERY PLAN
`--SCAN collated_values
