testing/sqltests/tests/snapshot_tests/indexes/snapshots/indexes__in-list-rowid-seek.snap
---
source: indexes.sqltest
expression: SELECT id, sku, name FROM products WHERE id IN (1, 2, 3);
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INTEGER PRIMARY KEY (rowid=?)
