testing/sqltests/tests/snapshot_tests/indexes/snapshots/indexes__index-for-correlated-max-materialized-cte.snap
---
source: indexes.sqltest
expression: |-
  WITH prices(price) AS MATERIALIZED (
          SELECT price FROM products
      )
      SELECT (
          SELECT MAX(p2.price)
          FROM prices p2
          WHERE p2.price < p1.price
      )
      FROM prices p1
      WHERE p1.price < 100;
info:
  statement_type: WITH (CTE)
  tables:
  - prices
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN products USING COVERING INDEX idx_products_price
|--SCAN prices AS p1
`--CORRELATED SCALAR SUBQUERY 1
   `--SCAN prices AS p2
