testing/sqltests/tests/snapshot_tests/indexes/snapshots/indexes__index-for-max.snap
---
source: indexes.sqltest
expression: SELECT MAX(price) FROM products;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING COVERING INDEX idx_products_price
